# otel-arrow

.github/workflows/: prepare-release.yml  push-release.yml  tidy.yml
rust/experimental/query_abstraction/: Cargo.toml
rust/experimental/query_abstraction/datafusion_planning/: Cargo.toml
rust/experimental/query_abstraction/datafusion_planning/src/: converter.rs  test.csv
rust/experimental/query_abstraction/df_planning/: Cargo.toml
rust/experimental/query_abstraction/kql_plugin/: Cargo.toml
rust/experimental/query_abstraction/kql_plugin/src/: lib.rs
rust/experimental/query_abstraction/ottl_plugin/: Cargo.toml
rust/experimental/query_abstraction/ottl_plugin/src/: lib.rs
rust/experimental/query_engine/engine-columnar/: Cargo.toml
rust/experimental/query_engine/engine-recordset/: Cargo.toml
rust/experimental/query_engine/engine-recordset-otlp-bridge/src/: bridge.rs  bridge_options.rs
rust/experimental/query_engine/engine-recordset2/: Cargo.toml
rust/experimental/query_engine/expressions/: Cargo.toml
rust/experimental/query_engine/kql-parser/: Cargo.toml
rust/experimental/query_engine/kql-parser/src/: kql_parser.rs  lib.rs  query_expression.rs  scalar_expression.rs  scalar_primitive_expressions.rs  shared_expressions.rs  tabular_expressions.rs
rust/experimental/query_engine/ottl-parser/: Cargo.toml
rust/experimental/query_engine/parser-abstractions/: Cargo.toml
rust/experimental/query_engine/parser-abstractions/src/: parser.rs  parser_error.rs  parser_state.rs
rust/otap-dataflow/: Cargo.toml  example_config.yaml
rust/otap-dataflow/.chloggen/: per-signal-produced-consumed-items.yaml
rust/otap-dataflow/.dev/: run_target.sh  send_message.sh
rust/otap-dataflow/benchmarks/: Cargo.toml
rust/otap-dataflow/configs/: trafficgen-debug-noop-signal-agnostic.yaml  trafficgen-debug-noop-signal-granular.yaml
rust/otap-dataflow/crates/admin/src/: telemetry.rs
rust/otap-dataflow/crates/config/src/: node_urn.rs  policy.rs
rust/otap-dataflow/crates/config/src/pipeline/telemetry/: metrics.rs
rust/otap-dataflow/crates/contrib-nodes/src/exporters/azure_monitor_exporter/: client.rs  config.rs  exporter.rs
rust/otap-dataflow/crates/controller/src/: lib.rs
rust/otap-dataflow/crates/core-nodes/: Cargo.toml
rust/otap-dataflow/crates/core-nodes/src/: lib.rs
rust/otap-dataflow/crates/core-nodes/src/processors/debug_processor/: README.md  metrics.rs  mod.rs
rust/otap-dataflow/crates/core-nodes/src/receivers/: mod.rs
rust/otap-dataflow/crates/core-nodes/src/receivers/fake_data_generator/: mod.rs
rust/otap-dataflow/crates/core-nodes/src/receivers/internal_telemetry_receiver/: mod.rs
rust/otap-dataflow/crates/core-nodes/src/receivers/otap_receiver/: mod.rs
rust/otap-dataflow/crates/core-nodes/src/receivers/otlp_receiver/: mod.rs
rust/otap-dataflow/crates/core-nodes/src/receivers/syslog_cef_receiver/: arrow_records_encoder.rs  mod.rs
rust/otap-dataflow/crates/core-nodes/src/receivers/syslog_cef_receiver/parser/: cef.rs  mod.rs  parsed_message.rs  rfc3164.rs  rfc5424.rs
rust/otap-dataflow/crates/core-nodes/src/receivers/topic_receiver/: mod.rs
rust/otap-dataflow/crates/engine/: telemetry.md
rust/otap-dataflow/crates/engine/src/: config.rs  control.rs  lib.rs  pipeline_ctrl.rs
rust/otap-dataflow/crates/engine/src/local/: mod.rs  processor.rs  processor_chain.rs
rust/otap-dataflow/crates/engine/src/testing/dst/: common.rs
rust/otap-dataflow/crates/otap/: Cargo.toml
rust/otap-dataflow/crates/otap/src/: lib.rs  otlp_http.rs  otlp_proto_conversion.rs  otlp_receiver_metrics.rs  pdata.rs
rust/otap-dataflow/crates/otap/src/attributes_processor/: attributes_processor.rs  common.rs  kql_attributes_processor.rs  mod.rs
rust/otap-dataflow/crates/otap/src/experimental/: mod.rs
rust/otap-dataflow/crates/otap/src/experimental/azure_monitor_exporter/: client.rs  exporter.rs
rust/otap-dataflow/crates/otap/src/experimental/commonsecuritylog_processor/: README.md  mod.rs
rust/otap-dataflow/crates/otap/src/otap_grpc/otlp/: server_new.rs
rust/otap-dataflow/crates/otap/src/otlp_http_exporter/: mod.rs
rust/otap-dataflow/crates/otap/src/testing/: mod.rs
rust/otap-dataflow/crates/otap/tests/: durable_buffer_processor_tests.rs  pipeline_tests.rs
rust/otap-dataflow/crates/telemetry/: Cargo.toml
rust/otap-dataflow/crates/telemetry-macros/src/: lib.rs
rust/otap-dataflow/crates/telemetry/src/: collector.rs  descriptor.rs  instrument.rs  metrics.rs  registry.rs
rust/otap-dataflow/crates/telemetry/src/metrics/: dispatcher.rs
rust/otap-dataflow/crates/validation/: Cargo.toml
rust/otap-dataflow/src/: main.rs
