[package]
name = "datafusion_planning"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
intermediate_language = { path = "../intermediate_language" }
datafusion = "47"
tokio = { version = "1.45.0", features = ["rt", "time", "net", "io-util", "sync", "macros", "rt-multi-thread"] }