[package]
name = "datafusion_planning"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
intermediate_language = { path = "../intermediate_language" }
datafusion = "47"
arrow = "55"

[dev-dependencies]
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }