[package]
name = "data_engine_recordset2"
version.workspace = true
authors.workspace = true
repository.workspace = true
license = "Apache-2.0"
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

data_engine_expressions = { path = "../expressions" }