[package]
name = "otap-df-core-nodes"
description = "OTAP Core nodes"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
otap-df-config = { path = "../config" }
otap-df-engine = { path = "../engine" }
otap-df-otap = { path = "../otap" }
otap-df-pdata = { path = "../pdata" }
otap-df-telemetry = { path = "../telemetry" }
otap-df-telemetry-macros = { path = "../telemetry-macros" }

async-trait.workspace = true
bytes.workspace = true
linkme.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
experimental-tls = ["otap-df-otap/experimental-tls"]