[package]
name = "otap-df-core-nodes"
description = "OTAP Core nodes"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
otap-df-config = { path = "../config" }
otap-df-engine = { path = "../engine" }
otap-df-otap = { path = "../otap" }
otap-df-pdata = { path = "../pdata" }
otap-df-telemetry = { path = "../telemetry" }
otap-df-telemetry-macros = { path = "../telemetry-macros" }

async-trait.workspace = true
bytes.workspace = true
humantime-serde.workspace = true
linkme.workspace = true
prost.workspace = true
prost-types.workspace = true
rand.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tonic.workspace = true
tonic-middleware.workspace = true
tower.workspace = true
weaver_common.workspace = true
weaver_forge.workspace = true
weaver_resolved_schema.workspace = true
weaver_resolver.workspace = true
weaver_semconv.workspace = true

[features]
experimental-tls = ["otap-df-otap/experimental-tls"]

[dev-dependencies]
arrow.workspace = true
async-stream.workspace = true
flate2.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
otap-df-engine = { path = "../engine", features = ["test-utils"] }
otap-df-otap = { path = "../otap", features = ["test-utils"] }
otap-df-channel = { path = "../channel" }
portpicker.workspace = true
prost.workspace = true
zstd.workspace = true